Adding funcionality to aggrgegate serenity reports

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- plugin to aggregate results -->
+            <plugin>
+                <groupId>net.serenity-bdd.maven.plugins</groupId>
+                <artifactId>serenity-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
@@ -163,7 +168,17 @@
             <version>2.3.31</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${org.io.rest-assured.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${org.io.rest-assured.version}</version>
+        </dependency>
 
 
     </dependencies>
