--- a/serenity.properties
+++ b/serenity.properties
@@ -10,4 +10,4 @@ enable.markdown=overview, story, narrative, scenario, step, theme, capability
 report.tagtypes=browser,req,issue
 step.creation.strategy = legacy
 serenity.fail.on=org.awaitility.core.ConditionTimeoutException, org.openqa.selenium.NoAlertPresentException
-webdriver.driver = firefox
+webdriver.driver = chrome
