--- a/serenity.properties
+++ b/serenity.properties
@@ -10,5 +10,5 @@ step.creation.strategy = legacy
 serenity.fail.on = org.awaitility.core.ConditionTimeoutException, org.openqa.selenium.NoAlertPresentException
 
 # What browser do you want your tests to run in (chrome/firefox/edge/ie)
-webdriver.driver = chrome
+webdriver.driver = firefox
 
