--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-core</artifactId>
-            <version>2.0.39</version>
+            <version>2.4.51</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.cucumber</groupId>
@@ -160,6 +160,14 @@
             <artifactId>serenity-rest-assured</artifactId>
             <version>${net.serenity.bdd}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.maven/maven-model -->
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
 
 
     </dependencies>
